# test-contract

./: .binpath  Cargo.toml  build.rs  rust-toolchain.toml
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  handler.rs  lib.rs
